--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ volumes:
   graylog-opensearch-volume:
   prometheus-volume:
   grafana-volume:
+  kafka-volume:
 
 networks:
   main:
@@ -112,26 +113,6 @@ services:
       - main
 
 # Message broker
-  zookeeper:
-    image: zookeeper:latest
-    container_name: zookeeper
-    healthcheck:
-      test: nc -z localhost ${ZOOKEEPER_PORT} || exit -1
-      interval: 10s
-      timeout: 5s
-      retries: 3
-    restart: always
-    environment:
-      ALLOW_ANONYMOUS_LOGIN: yes
-    ports:
-      - "${ZOOKEEPER_PORT}:2181"
-    depends_on:
-      - graylog
-    volumes:
-      - zookeeper-volume:/var/lib/zookeeper/data
-    networks:
-      - main
-
   kafka-1:
     image: bitnami/kafka:latest
     container_name: kafka-1
@@ -142,18 +123,21 @@ services:
       retries: 60
     restart: always
     environment:
-      KAFKA_BROKER_ID: 1
-      KAFKA_CFG_ZOOKEEPER_CONNECT: zookeeper:${ZOOKEEPER_PORT}
+      KAFKA_BROKER_ID: 0
+      KAFKA_CFG_NODE_ID: 0
+      KAFKA_CFG_PROCESS_ROLES: controller,broker
+      KAFKA_CFG_CONTROLLER_QUORUM_VOTERS: 0@kafka-1:9093
       ALLOW_PLAINTEXT_LISTENER: yes
-      KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP: CLIENT:PLAINTEXT,EXTERNAL:PLAINTEXT
-      KAFKA_CFG_LISTENERS: CLIENT://:${KAFKA_0_CLIENT_PORT},EXTERNAL://:${KAFKA_0_EXTERNAL_PORT}
-      KAFKA_CFG_ADVERTISED_LISTENERS: CLIENT://kafka-1:${KAFKA_0_CLIENT_PORT},EXTERNAL://kafka-1:${KAFKA_0_EXTERNAL_PORT}
+      KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP: CLIENT:PLAINTEXT,EXTERNAL:PLAINTEXT,CONTROLLER:PLAINTEXT
+      KAFKA_CFG_LISTENERS: CLIENT://:${KAFKA_0_CLIENT_PORT},EXTERNAL://:${KAFKA_0_EXTERNAL_PORT},CONTROLLER://:9093
+      KAFKA_CFG_ADVERTISED_LISTENERS: CLIENT://kafka-1:${KAFKA_0_CLIENT_PORT},EXTERNAL://kafka-1:${KAFKA_0_EXTERNAL_PORT},CONTROLLER://kafka-1:9093
       KAFKA_CFG_INTER_BROKER_LISTENER_NAME: CLIENT
+      KAFKA_CFG_CONTROLLER_LISTENER_NAMES: CONTROLLER
     ports:
       - "${KAFKA_0_CLIENT_PORT}:${KAFKA_0_CLIENT_PORT}"
       - "${KAFKA_0_EXTERNAL_PORT}:${KAFKA_0_EXTERNAL_PORT}"
-    depends_on:
-      - zookeeper
+    volumes:
+      - kafka-volume:/bitnami/kafka
     networks:
       - main
       
