Add bot application unit tests; Cancellation support

--- a/external/TelegramBot/src/Segrom.JobObserver.TelegramBot.Application/Segrom.JobObserver.TelegramBot.Application.csproj
+++ b/external/TelegramBot/src/Segrom.JobObserver.TelegramBot.Application/Segrom.JobObserver.TelegramBot.Application.csproj
@@ -16,4 +16,7 @@
       <ProjectReference Include="..\Segrom.JobObserver.TelegramBot.Domain\Segrom.JobObserver.TelegramBot.Domain.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+        <InternalsVisibleTo Include="Segrom.JobObserver.TelegramBot.Test" />
+    </ItemGroup>
 </Project>
