--- a/external/TelegramBot/test/Segrom.JobObserver.TelegramBot.Test/Segrom.JobObserver.TelegramBot.Test.csproj
+++ b/external/TelegramBot/test/Segrom.JobObserver.TelegramBot.Test/Segrom.JobObserver.TelegramBot.Test.csproj
@@ -10,12 +10,18 @@
     <ItemGroup>
         <PackageReference Include="coverlet.collector" Version="6.0.2"/>
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.12.0"/>
+        <PackageReference Include="Moq" Version="4.20.72" />
         <PackageReference Include="xunit" Version="2.9.2"/>
         <PackageReference Include="xunit.runner.visualstudio" Version="2.8.2"/>
     </ItemGroup>
 
     <ItemGroup>
         <Using Include="Xunit"/>
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\..\..\..\test\Segrom.JobObserver.OzonService.TestUtils\Segrom.JobObserver.OzonService.TestUtils.csproj" />
+      <ProjectReference Include="..\..\src\Segrom.JobObserver.TelegramBot.Application\Segrom.JobObserver.TelegramBot.Application.csproj" />
     </ItemGroup>
 
 </Project>
